# git-workshop

./: CMakeLists.txt  LICENSE  README.md  application.c  application.h  build.sh  buildinfo.h.in  cleanup.sh  crash_handler.c  crash_handler.h  hello_world.c  hello_world.h  main.c  new_file.c  text_manager.c  text_manager.h
